force-app/main/default/objects/Student2__c/Student2__c.object-meta.xml
<CustomObject>
    <label>Student2</label>
    <nameField>
        <label>Student2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>