force-app/main/default/objects/Student2__c/fields/Mobile_no__c.field-meta.xml
<CustomField>
    <fullName>Mobile_no__c</fullName>
    <label>Mobile no.</label>
    <type>Phone</type>
</CustomField>