force-app/main/default/objects/Student2__c/fields/Parent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mobile__c</fullName>
    <label>Parent Mobile</label>
    <type>Phone</type>
</CustomField>