force-app/main/default/objects/Student2__c/fields/Roll_no__c.field-meta.xml
<CustomField>
    <fullName>Roll_no__c</fullName>
    <label>Roll no.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>